--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "A simple backend assignment given by roxiler.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "author": "Pankaj",
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "prisma": "^5.10.2"
   }
 }
