add script for prisma, update readme

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL="postgresql://postgres:password@localhost:5432/roxiler"
+DATABASE_URL="postgresql://pankajbeniwal3112:6CiY3QMTSDdp@ep-sweet-snowflake-41814264.us-east-2.aws.neon.tech/prisma_migrate_shadow_db_60b1f356-61b7-4477-a320-857e3da24759?sslmode=require"
 PORT=8000
 THIRD_PARTY_API_URL="https://s3.amazonaws.com/roxiler.com/product_transaction.json"
