--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "node server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+	"prisma": "npx prisma migrate dev --name init"
   },
   "author": "Pankaj",
   "license": "ISC",
@@ -14,7 +15,6 @@
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "prisma": "^5.10.2"
+    "express": "^4.18.2"
   }
 }
